--- a/wp-content/themes/goiteens/assets/scss/layout/page/blog/_section-title.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/blog/_section-title.scss
@@ -1,5 +1,5 @@
 .site{
-    .section-title, .popular-title, .offers-title{
+    .section-title, .popular-title, .offers-title, .lesson-title{
         color:$title-blog;
         font-size: 20px;
         line-height: 1.1;
